--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "ConnectionStrings": { 
-    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=marco-cordoba;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {
+    "DefaultConnection": "workstation id=marco-cordoba.mssql.somee.com;packet size=4096;user id=markoc2_SQLLogin_1;pwd=7krvn3rx8p;data source=marco-cordoba.mssql.somee.com;persist security info=False;initial catalog=marco-cordoba"
+    //"DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=marco-cordoba;Trusted_Connection=True;MultipleActiveResultSets=true"
     //"DefaultConnection": "Server=DESKTOP-LN2IU17;Database=marco-cordoba;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
